[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/prototypes/wasd.png" type="Texture" id=1]
[ext_resource path="res://assets/prototypes/mouse.png" type="Texture" id=2]
[ext_resource path="res://actors/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/prototypes/DubsteptrixRegular-OK74.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Globals/Environment.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/prototypes/proto-stage.png" type="Texture" id=6]
[ext_resource path="res://Screens/InstructionScreen.gd" type="Script" id=7]
[ext_resource path="res://assets/prototypes/2nd Dimension.wav" type="AudioStream" id=8]
[ext_resource path="res://weapons/BulletManager.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 0.18
glow_hdr_luminance_cap = 0.21

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="InstructionScreen" type="Node2D"]
script = ExtResource( 7 )

[node name="Mouse" type="Sprite" parent="."]
self_modulate = Color( 0, 14, 14, 1 )
position = Vector2( 1019, 629 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Label" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 14, 0, 1 )
margin_left = 845.0
margin_top = 429.0
margin_right = 1001.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 1 )
text = "Attack"

[node name="Label6" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 14, 0, 1 )
margin_left = 1117.0
margin_top = 613.0
margin_right = 1273.0
margin_bottom = 641.0
custom_fonts/font = SubResource( 1 )
text = "Aim"

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
self_modulate = Color( 0, 14, 0, 1 )
margin_left = 611.0
margin_top = 373.0
margin_right = 1341.0
margin_bottom = 494.0
custom_fonts/font = SubResource( 1 )
text = "Hold To ready

Release after red
to charge"

[node name="Label2" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 14, 0, 1 )
margin_left = 1043.0
margin_top = 430.0
margin_right = 1347.0
margin_bottom = 458.0
custom_fonts/font = SubResource( 1 )
text = "Switch Shapes"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 14, 0, 14, 1 )
margin_left = 982.0
margin_top = 477.0
margin_right = 991.0
margin_bottom = 588.0

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
self_modulate = Color( 14, 0, 14, 1 )
margin_left = 1050.0
margin_top = 479.0
margin_right = 1059.0
margin_bottom = 590.0

[node name="Label4" type="Label" parent="CanvasLayer"]
self_modulate = Color( 14, 0, 14, 1 )
margin_left = 256.0
margin_top = 31.0
margin_right = 1528.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "Hint: Shield Persists between shapes untill destroyed"

[node name="Label5" type="Label" parent="CanvasLayer"]
self_modulate = Color( 14, 14, 0, 1 )
margin_left = 292.0
margin_top = 314.0
margin_right = 1564.0
margin_bottom = 346.0
custom_fonts/font = SubResource( 3 )
text = "Press F when ready to enter the arena...."

[node name="Wasd" type="Sprite" parent="."]
self_modulate = Color( 0, 14, 14, 1 )
position = Vector2( 266, 573 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 636, 231 )

[node name="Environment" parent="." instance=ExtResource( 5 )]

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 14, 0, 1 )
position = Vector2( 681, 382 )
texture = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 0, 14, 14, 1 )
margin_left = -238.0
margin_top = 83.0
margin_right = 1604.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 4 )
text = "This is where the upgrade screen would be.
IF I HAD ONE (or could get it working)

congratulations you have beat the prototype,
 I hope you got a feel for the concept.

Press F to play again"
align = 1
valign = 1
